<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/black_background"
	tools:context=".Login_activity">

	<TextView
		android:id="@+id/__no_tienes_una_cuenta"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="40dp"
		android:layout_marginTop="64dp"
		android:text="@string/aviso_4"
		android:textColor="@color/_bg__frame_1_ek2_color"
		app:layout_constraintBottom_toBottomOf="@+id/_bg__framepantallalogin"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.188"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txt_contrasena"
		app:layout_constraintVertical_bias="0.0" />

	<ImageView
		android:id="@+id/encabezado_login"
		android:layout_width="330dp"
		android:layout_height="135dp"
		android:contentDescription="@string/ek_img_content"
		android:src="@drawable/encabezado_login"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.493"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.026" />

	<TextView
		android:id="@+id/lblUno"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="224dp"
		android:text="@string/aviso_1"
		android:textColor="@color/white"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.125"
		app:layout_constraintStart_toStartOf="@+id/_bg__framepantallalogin"
		app:layout_constraintTop_toBottomOf="@+id/encabezado_login" />

	<TextView
		android:id="@+id/lblDos"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/aviso_2"
		android:textColor="@color/white"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.629"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/lblUno" />

	<TextView
		android:id="@+id/lblTres"
		android:layout_width="342dp"
		android:layout_height="46dp"
		android:layout_marginTop="16dp"
		android:text="@string/aviso_3"
		android:textColor="@color/white"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.634"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/lblDos" />

	<TextView
		android:id="@+id/registrate"
		android:layout_width="95dp"
		android:layout_height="19dp"
		android:layout_marginTop="48dp"
		android:onClick="nuevoUsuario"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/registro"
		android:textColor="@color/white"
		android:textSize="14sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="@+id/olvidaste_la_contrase_a"
		app:layout_constraintTop_toTopOf="@+id/olvidaste_la_contrase_a" />

	<TextView
		android:id="@+id/olvidaste_la_contrase_a"
		android:layout_width="wrap_content"
		android:layout_height="48dp"
		android:layout_marginStart="228dp"
		android:layout_marginTop="16dp"
		android:onClick="olvidePass"
		android:shadowColor="#000000"
		android:shadowDx="0"
		android:shadowDy="4"
		android:shadowRadius="4"
		android:text="@string/olvido"
		android:textColor="@color/white"
		android:textSize="13sp"
		app:layout_constraintBottom_toTopOf="@+id/btn_login"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.104"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txt_contrasena"
		app:layout_constraintVertical_bias="0.0" />

	<EditText
		android:id="@+id/txt_correo"
		android:layout_width="323dp"
		android:layout_height="48dp"
		android:layout_marginTop="52dp"
		android:autofillHints="yes"
		android:background="@drawable/rectangle_1_shape"
		android:hint="@string/txt_email"
		android:inputType="text"
		android:shadowColor="#FDFDFD"
		android:textColor="@color/white"
		android:textColorHint="#BFBFBF"
		app:layout_constraintBottom_toTopOf="@+id/txt_contrasena"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHeight_min="wrap"
		app:layout_constraintHorizontal_bias="0.527"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/lblTres"
		app:layout_constraintVertical_bias="0.0"
		app:layout_constraintWidth_min="wrap" />

	<EditText
		android:id="@+id/txt_contrasena"
		android:layout_width="318dp"
		android:layout_height="48dp"
		android:layout_marginTop="136dp"
		android:autofillHints="yes"
		android:background="@drawable/rectangle_1_shape"
		android:hint="@string/txt_pass"
		android:inputType="textPassword"
		android:shadowColor="#FDFDFD"
		android:textColor="@color/white"
		android:textColorHint="#BFBFBF"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.548"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/lblTres"
		app:layout_constraintVertical_bias="0.0" />

	<Button
		android:id="@+id/btn_login"
		style="@style/Buttons1"
		android:layout_width="300dp"
		android:layout_height="63.55dp"
		android:layout_alignParentStart="true"
		android:background="@drawable/rectangle_4_shape"
		android:onClick="Ingresar"
		android:text="@string/btn_ingreso"
		android:textColor="#BFBFBF"
		android:textSize="24sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.459"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txt_contrasena"
		app:layout_constraintVertical_bias="0.738" />
</androidx.constraintlayout.widget.ConstraintLayout>