<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_background"
    tools:context=".ForgetPass_activity">

    <TextView
        android:id="@+id/lblTres"
        android:layout_width="341dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:text="@string/aviso_7"
        android:textColor="@color/_bg__frame_1_ek2_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDos" />

    <TextView
        android:id="@+id/lblUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/aviso_5"
        android:textColor="@color/_bg__frame_1_ek2_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblDos"
        android:layout_width="315dp"
        android:layout_height="67dp"
        android:layout_marginTop="36dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:text="@string/aviso_6"
        android:textAlignment="center"
        android:textColor="@color/_bg__frame_1_ek2_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUno" />

    <TextView
        android:id="@+id/lblCuatro"
        android:layout_width="322dp"
        android:layout_height="77dp"
        android:layout_marginTop="28dp"
        android:text="@string/aviso_8"
        android:textColor="@color/_bg__frame_1_ek2_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTres" />

    <EditText
        android:id="@+id/txt_correoCC"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autofillHints="yes"
        android:background="@drawable/rectangle_1_shape"
        android:hint="@string/txt_email"
        android:inputType="text"
        android:shadowColor="#FDFDFD"
        android:textColor="@color/white"
        android:textColorHint="#BFBFBF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCuatro" />

    <Button
        android:id="@+id/btn_cambiarC"
        style="@style/Buttons1"
        android:layout_width="300dp"
        android:layout_height="63.55dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp"
        android:background="@drawable/rectangle_4_shape"
        android:onClick="cambiarContrasena"
        android:text="@string/btn_cambpass"
        android:textColor="#BFBFBF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correoCC"
        app:layout_constraintVertical_bias="0.896" />

    <ImageButton
        android:id="@+id/btn_volver"
        android:layout_width="47dp"
        android:layout_height="35dp"
        android:background="@drawable/rectangle_11_shape"
        android:contentDescription="@string/ek_img_content"
        android:onClick="volver"
        app:layout_constraintBottom_toTopOf="@+id/lblUno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543"
        app:srcCompat="@drawable/arrow_1" />

</androidx.constraintlayout.widget.ConstraintLayout>